--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "require": {
-        "slim/slim": "^3.0",
-        "symfony/yaml": "^3.3"
+        "symfony/yaml": "^3.3",
+        "artyomderyavka/adserverengineslim": "dev-master"
     },
     "autoload": {
       "psr-4": {
